Update docs and added status check endpoint
